 * ExternalIVR now takes several options that affect the way it performs, as
   well as having several new commands.  Please see doc/externalivr.txt for the
   complete documentation.
 * ChanIsAvail has a new option, 'a', which will return all available channels instead
   of just the first one if you give the function more then one channel to check.

SIP Changes
-----------
 * The ATTENDED_TRANSFER_COMPLETE_SOUND can now be set using setvar to cause a given
   audio file to be played upon completion of an attended transfer.
 * Added DNS manager support to registrations for peers referencing peer entries.
   DNS manager runs in the background which allows DNS lookups to be run asynchronously 
   as well as periodically updating the IP address. These properties allow for
   better performance as well as recovery in the event of an IP change.
 * Performance improvements via using hash tables (astobj2) and doubly-linked lists to improve 
   load/reload of large numbers of peers/users by ~40x (for large lists of peers.
   Initially, we saw 4x improvement in call setup/destruction, but at the time
   of merging, this gain has disappeared; further research will be done to try
   and restore this performance improvement. Astobj2 refcounting is now used
   for users, peers, and dialogs.  Users are encouraged to assist in regression
   testing and problem reporting!
 * Added ability to specify registration expiry time on a per registration basis in
   the register line.
 * Added support for T140 RED - redundancy in T.140 to prevent text loss due to
   lost packets.
 * Added t38pt_usertpsource option. See sip.conf.sample for details.
 * Added SIPnotify AMI command, for sending arbitrary SIP notify commands.

IAX Changes
-----------
 * Existing DNS manager lookups extended to check for SRV records.

CLI Changes
-----------
  * New CLI command, "config reload <file.conf>" which reloads any module that